--- a/e_lib/templates/base.html
+++ b/e_lib/templates/base.html
@@ -2,6 +2,7 @@
 {% load staticfiles %}
 <html>
   <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta charset="utf-8">
     <title>Notesify</title>
     <!-- Latest compiled and minified CSS -->
