--- a/e_lib/templates/base.html
+++ b/e_lib/templates/base.html
@@ -1,66 +1,28 @@
 <!DOCTYPE html>
 {% load staticfiles %}
 <html>
-  <head>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta charset="utf-8">
-    <title>Notesify</title>
-    <!-- Latest compiled and minified CSS -->
 
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+<head>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta charset="utf-8">
+  <title>Notesify</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="{% static 'bb/css/w3.css'%}">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
-    <!-- Optional theme -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
-
-    <!-- Latest compiled and minified JavaScript -->
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
-
-
-    <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
-
-    <link rel="stylesheet" href="{% static 'bb/css/master.css'%}">
+<body class="w3-light-grey w3-content" style="max-width:1600px">
 
 
   </head>
 
 
   <body>
+    <div class="container mycontent">
+      {% block content %}
 
-    <nav class="navbar  mynav" role="navigation" id="navbar">
-    			<div class="container">
-
-            <a class="navbar-brand mynav" href="{% url 'home' %}">NOTESIFY</a>
-
-    					<ul class="nav navbar-nav navbar-right">
-                {% if user.is_authenticated %}
-                    <li><a href="{% url 'posts:create' %}" class="btn btn-simple">Upload</a></li>
-                    <li><a href="{% url 'groups:all' %}" class="btn btn-simple">Browse</a></li>
-                    
-                    <li><a href="{% url 'accounts:logout' %}" class="btn btn-simple">Log out</a></li>
-                {% else %}
-                    <li><a href="{% url 'groups:all' %}"class="btn btn-simple">Browse</a></li>
-                    <li><a href="{% url 'accounts:login' %}" class="btn btn-simple">Log in</a></li>
-                    <li><a href="{% url 'accounts:signup' %}" class="btn btn-simple">Sign up</a></li>
-                {% endif %}
-</ul>
-
-        
-
-    			</div>
-    		</nav>
-        <div class="container mycontent">
-          {% block content %}
-
-          {% endblock %}
-                                
-        </div>
-
-
-
-<canvas id="canvas"></canvas>
-
-
-
+      {% endblock %}
+    </div>
   </body>
-  <script src="{% static 'bb/js/master.js'%}" type="text/javascript" ></script>
+  <script src="{% static 'bb/js/master.js'%}" type="text/javascript"></script>
+
 </html>
