--- a/e_lib/templates/index.html
+++ b/e_lib/templates/index.html
@@ -1,5 +1,228 @@
-{% extends 'base.html'%}
-{% block content %}
-    <h1>Welcome to Notesify ! </h1>
+{% extends 'base.html'%} {% block content %}
+
+<!-- Sidebar/menu -->
+<nav class="w3-sidebar w3-collapse w3-white w3-animate-left" style="z-index: 3; width: 300px;" id="mySidebar">
+    <br />
+    <div class="w3-container">
+        <a href="#" onclick="w3_close()" class="w3-hide-large w3-right w3-padding w3-hover-grey" title="close menu">
+            <i class="fa fa-remove"></i>
+        </a>
+        <img src="TODO" style="width: 45%;" class="w3-round" /><br /><br />
+        <h4><b>Notesify</b></h4>
+    </div>
+    <div class="w3-bar-block">
+        <a href="#courses" onclick="w3_close()" class="w3-bar-item w3-button w3-padding w3-text-teal"><i
+                class="fa fa-th-large fa-fw w3-margin-right"></i>Courses</a>
+        <a href="#about" onclick="w3_close()" class="w3-bar-item w3-button w3-padding"><i
+                class="fa fa-info fa-fw w3-margin-right"></i>About</a>
+        <a href="#contribute" onclick="w3_close()" class="w3-bar-item w3-button w3-padding"><i
+                class="fa fa-github-alt fa-fw w3-margin-right"></i>Contribute</a>
+    </div>
+</nav>
+
+<!-- Overlay effect when opening sidebar on small screens -->
+<div class="w3-overlay w3-hide-large w3-animate-opacity" onclick="w3_close()" style="cursor: pointer;" title="close side menu" id="myOverlay"></div>
+
+<!-- !PAGE CONTENT! -->
+<div class="w3-main" style="margin-left: 300px;">
+    <!-- Header -->
+    <header id="courses">
+        <a href="#"><img src="TODO" style="width: 65px;" class="w3-circle w3-right w3-margin w3-hide-large w3-hover-opacity" /></a>
+        <span class="w3-button w3-hide-large w3-xxlarge w3-hover-text-grey" onclick="w3_open()"><i
+                class="fa fa-bars"></i></span>
+        <div class="w3-container">
+            <h1><b>Notesify | Note Sharing Webapp</b></h1>
+            <div class="w3-section w3-padding-16">
+                {% if user.is_authenticated %}
+                <button class="w3-button w3-white">
+                    <i class="fa fa-upload w3-margin-right"></i><a href="{% url 'posts:create' %}"
+                        style="text-decoration: none;">Upload</a>
+                </button>
+                <button class="w3-button w3-white w3-hide-small">
+                    <i class="fa fa-sign-out w3-margin-right"></i><a href="{% url 'accounts:logout' %}"
+                        style="text-decoration: none;">Log out</a>
+                </button> {% else %}
+
+                <button class="w3-button w3-white w3-hide-small">
+                    <i class="fa fa-sign-in w3-margin-right"></i><a href="{% url 'accounts:login' %}"
+                        style="text-decoration: none;">Login</a>
+                </button>
+                <button class="w3-button w3-white w3-hide-small">
+                    <i class="fa fa-user-plus w3-margin-right"></i><a href="{% url 'accounts:signup' %}"
+                        style="text-decoration: none;">Sign-up</a>
+                </button> {% endif %}
+            </div>
+        </div>
+    </header>
+
+    <div class="w3-teal w3-margin-bottom"><br></div>
+
+    <!-- First Photo Grid-->
+    <div class="w3-row-padding">
+        <div class="w3-third w3-container w3-margin-bottom">
+            <img src="TODO" alt="TODO" style="width: 100%;" class="w3-hover-opacity" />
+            <div class="w3-container w3-white">
+                <p><b>Semester I</b></p>
+                <p>Show the subjects available here. Box is resized dynamically.</p>
+            </div>
+        </div>
+        <div class="w3-third w3-container w3-margin-bottom">
+            <img src="TODO" alt="TODO" style="width: 100%;" class="w3-hover-opacity" />
+            <div class="w3-container w3-white">
+                <p><b>Semester II</b></p>
+                <p>{python here}</p>
+                <ul>
+                    <li>Thank</li>
+                    <li>God</li>
+                    <li>Kannada</li>
+                    <li>Mei</li>
+                    <li>Pass</li>
+                    <li>Ho</li>
+                    <li>Gaya</li>
+                </ul>
+            </div>
+        </div>
+        <div class="w3-third w3-container">
+            <img src="TODO" alt="TODO" style="width: 100%;" class="w3-hover-opacity" />
+            <div class="w3-container w3-white">
+                <p><b>Semester III</b></p>
+                <p>
+                    Praesent tincidunt sed tellus ut rutrum. Sed vitae justo condimentum, porta lectus vitae, ultricies congue gravida diam non fringilla.
+                </p>
+            </div>
+        </div>
+    </div>
+
+    <!-- Second Photo Grid-->
+    <div class="w3-row-padding">
+        <div class="w3-third w3-container w3-margin-bottom">
+            <img src="TODO" alt="TODO" style="width: 100%;" class="w3-hover-opacity" />
+            <div class="w3-container w3-white">
+                <p><b>Semester IV</b></p>
+                <p>
+                    Praesent tincidunt sed tellus ut rutrum. Sed vitae justo condimentum, porta lectus vitae, ultricies congue gravida diam non fringilla.
+                </p>
+            </div>
+        </div>
+        <div class="w3-third w3-container w3-margin-bottom">
+            <img src="TODO" alt="TODO" style="width: 100%;" class="w3-hover-opacity" />
+            <div class="w3-container w3-white">
+                <p><b>Semester V</b></p>
+                <p>
+                    Praesent tincidunt sed tellus ut rutrum. Sed vitae justo condimentum, porta lectus vitae, ultricies congue gravida diam non fringilla.
+                </p>
+            </div>
+        </div>
+        <div class="w3-third w3-container">
+            <img src="TODO" alt="TODO" style="width: 100%;" class="w3-hover-opacity" />
+            <div class="w3-container w3-white">
+                <p><b>Semester VI</b></p>
+                <p>
+                    Praesent tincidunt sed tellus ut rutrum. Sed vitae justo condimentum, porta lectus vitae, ultricies congue gravida diam non fringilla.
+                </p>
+            </div>
+        </div>
+    </div>
+
+    <!-- Third Photo Grid-->
+    <div class="w3-row-padding">
+        <div class="w3-third w3-container w3-margin-bottom">
+            <img src="TODO" alt="TODO" style="width: 100%;" class="w3-hover-opacity" />
+            <div class="w3-container w3-white">
+                <p><b>Semester VII</b></p>
+                <p>
+                    Praesent tincidunt sed tellus ut rutrum. Sed vitae justo condimentum, porta lectus vitae, ultricies congue gravida diam non fringilla.
+                </p>
+            </div>
+        </div>
+        <div class="w3-third w3-container w3-margin-bottom">
+            <img src="TODO" alt="TODO" style="width: 100%;" class="w3-hover-opacity" />
+            <div class="w3-container w3-white">
+                <p><b>Semester VIII</b></p>
+                <p>
+                    Praesent tincidunt sed tellus ut rutrum. Sed vitae justo condimentum, porta lectus vitae, ultricies congue gravida diam non fringilla.
+                </p>
+            </div>
+        </div>
+        <div class="w3-third w3-container">
+            <img src="TODO" alt="TODO" style="width: 100%;" class="w3-hover-opacity" />
+            <div class="w3-container w3-white">
+                <p><b>Misc</b></p>
+                <p>
+                    Praesent tincidunt sed tellus ut rutrum. Sed vitae justo condimentum, porta lectus vitae, ultricies congue gravida diam non fringilla.
+                </p>
+            </div>
+        </div>
+    </div>
+
+    <br />
+
+    <div class="w3-container w3-padding-large" style="margin-bottom: 32px;" id="about">
+        <h4><b>About Notesify</b></h4>
+        <p>Lorem Ipsum</p>
+    </div>
+    <!-- Contact Section -->
+    <div class="w3-container w3-padding-large w3-teal">
+        <h4 id="contribute"><b>Contribute</b></h4>
+        <div class="w3-row-padding w3-center w3-padding-24" style="margin: 0 -16px;">
+            <div class="w3-third">
+                <p><i class="fa fa-github-alt w3-xxlarge w3-text-light-grey"></i></p>
+                <p>Improve <a href="https://github.com/Dhruvk1999/notesify">code</a></p>
+            </div>
+            <div class="w3-third">
+                <p><i class="fa fa-file w3-xxlarge w3-text-light-grey"></i></p>
+                <p>Share documents</p>
+            </div>
+            <div class="w3-third">
+                <p><i class="fa fa-phone w3-xxlarge w3-text-light-grey"></i></p>
+                <p>Booty call</p>
+            </div>
+        </div>
+    </div>
+
+    <!-- Footer -->
+    <footer class="w3-container w3-padding-32">
+        <div class="w3-row-padding">
+            <div class="w3-third">
+                <h3>Code contribution</h3>
+                <p>
+                    Help us improve code if you're familiar with the python web framework django
+                </p>
+                <p>Or raise an issue about typos</p>
+            </div>
+
+            <div class="w3-third">
+                <h3>Document sharing</h3>
+                <p>
+                    Send documents by e-mail. Add details like semester, subject, and type (note/assignment/exam)
+                </p>
+            </div>
+
+            <div class="w3-third">
+                <h3>Made by</h3>
+                <p>Coded by Dhruv using smart fridge</p>
+                <p>Designed by Abhishek using MS Paint on Windows Bandara</p>
+            </div>
+        </div>
+    </footer>
+
+    <div class="w3-black w3-center w3-padding-24">
+        Notesify | Notes Sharing Webapp
+    </div>
+
+    <!-- End page content -->
+</div>
+
+<script>
+    // Script to open and close sidebar
+    function w3_open() {
+        document.getElementById("mySidebar").style.display = "block";
+        document.getElementById("myOverlay").style.display = "block";
+    }
+
+    function w3_close() {
+        document.getElementById("mySidebar").style.display = "none";
+        document.getElementById("myOverlay").style.display = "none";
+    }
+</script>
 {% endblock %}
-    
