--- a/e_lib/accounts/templates/accounts/login.html
+++ b/e_lib/accounts/templates/accounts/login.html
@@ -3,10 +3,14 @@
 
 {% block content %}
     <div class='container'>
+        
         <h1>Log In</h1>
         <form method='POST'>
+            
             {% csrf_token %}
             {% bootstrap_form form %}
-            <input type="submit" class="btn btn-default" value="Submit">
+
+            <p><input type="submit" class="btn btn-default" value="Submit">
+            </div>
         </form>
 {% endblock%}
