--- a/e_lib/accounts/templates/accounts/signup.html
+++ b/e_lib/accounts/templates/accounts/signup.html
@@ -3,10 +3,12 @@
 
 {% block content %}
     <div class='container'>
+        
         <h1>Sign Up!</h1>
         <form method='POST'>
             {% csrf_token %}
             {% bootstrap_form form %}
-            <input type="submit" class="btn btn-default" value="Submit">
+            <p><input type="submit" class="btn btn-default" value="Submit">
         </form>
+    </div>
 {% endblock%}
