--- a/e_lib/groups/templates/groups/group_list.html
+++ b/e_lib/groups/templates/groups/group_list.html
@@ -10,9 +10,9 @@
 		</h2>
 
     {% endif %}
-			<h2>Categories</h2>
+			<h2>Notes</h2>
 
-			<p>Welcome to the Categories Page! Select a Category to see the content!</p>
+			<p>Welcome to the Notes Index Page! Select your Semester to see the content!</p>
 	</div>
 	{% if user.is_authenticated %}
 	<a href="{% url 'groups:create' %}" class="btn btn-md btn-fill btn-warning"><span class="glyphicon glyphicon-plus-sign"></span> Create New Category !</a>
@@ -21,18 +21,25 @@
 {% endblock %}
 
 {% block group_content %}
-<div class="col-md-8">
+<div class="w3-main" style="margin-left: 10px;">
+	<br>
+	<br>
+	<br>
+	
+	<div class="w3-teal w3-margin-bottom"><br></div>
 	<div class="list-group">
 		{% for group in object_list %}
+		<div class="w3-third w3-container w3-margin-bottom">
+			<div class="w3-container w3-white">
 		  <a class="list-group-item" href="{% url 'groups:single' slug=group.slug %}">
 			     <h3 class="title list-group-item-heading">{{ group.name }}</h3>
-			<div class="list-group-item-text container-fluid">
+			
 				{{ group.description_html|safe }}
-				<div class="row">
-					<div class="col-md-4">
-						<span class="badge">{{ group.posts.count }}</span> post{{ group.posts.count|pluralize }}
-					</div>
+				
 					
+						<span class="badge">{{ group.posts.count }}</span> post{{ group.posts.count|pluralize }}
+					
+				
 				</div>
 			</div>
 		</a>
