--- a/e_lib/templates/index.html
+++ b/e_lib/templates/index.html
@@ -1,93 +1,39 @@
 {% extends 'base.html'%} {% block content %}
-
-<!-- Sidebar/menu -->
-<nav class="w3-sidebar w3-collapse w3-white w3-animate-left" style="z-index: 3; width: 300px;" id="mySidebar">
-    <br />
-    <div class="w3-container">
-        <a href="#" onclick="w3_close()" class="w3-hide-large w3-right w3-padding w3-hover-grey" title="close menu">
-            <i class="fa fa-remove"></i>
-        </a>
-        <img src="TODO" style="width: 45%;" class="w3-round" /><br /><br />
-        <h4><b>Notesify</b></h4>
-    </div>
-    <div class="w3-bar-block">
-        <a href="#courses" onclick="w3_close()" class="w3-bar-item w3-button w3-padding w3-text-teal"><i
-                class="fa fa-th-large fa-fw w3-margin-right"></i>Courses</a>
-        <a href="#about" onclick="w3_close()" class="w3-bar-item w3-button w3-padding"><i
-                class="fa fa-info fa-fw w3-margin-right"></i>About</a>
-        <a href="#contribute" onclick="w3_close()" class="w3-bar-item w3-button w3-padding"><i
-                class="fa fa-github-alt fa-fw w3-margin-right"></i>Contribute</a>
-    </div>
-</nav>
-
-<!-- Overlay effect when opening sidebar on small screens -->
-<div class="w3-overlay w3-hide-large w3-animate-opacity" onclick="w3_close()" style="cursor: pointer;" title="close side menu" id="myOverlay"></div>
-
-<!-- !PAGE CONTENT! -->
-<div class="w3-main" style="margin-left: 300px;">
-    <!-- Header -->
-    <header id="courses">
-        <a href="#"><img src="TODO" style="width: 65px;" class="w3-circle w3-right w3-margin w3-hide-large w3-hover-opacity" /></a>
-        <span class="w3-button w3-hide-large w3-xxlarge w3-hover-text-grey" onclick="w3_open()"><i
-                class="fa fa-bars"></i></span>
-        <div class="w3-container">
-            <h1><b>Notesify | Note Sharing Webapp</b></h1>
-            <div class="w3-section w3-padding-16">
-                {% if user.is_authenticated %}
-                <button class="w3-button w3-white">
-                    <i class="fa fa-upload w3-margin-right"></i><a href="{% url 'posts:create' %}"
-                        style="text-decoration: none;">Upload</a>
-                </button>
-                <button class="w3-button w3-white w3-hide-small">
-                    <i class="fa fa-sign-out w3-margin-right"></i><a href="{% url 'accounts:logout' %}"
-                        style="text-decoration: none;">Log out</a>
-                </button> {% else %}
-
-                <button class="w3-button w3-white w3-hide-small">
-                    <i class="fa fa-sign-in w3-margin-right"></i><a href="{% url 'accounts:login' %}"
-                        style="text-decoration: none;">Login</a>
-                </button>
-                <button class="w3-button w3-white w3-hide-small">
-                    <i class="fa fa-user-plus w3-margin-right"></i><a href="{% url 'accounts:signup' %}"
-                        style="text-decoration: none;">Sign-up</a>
-                </button> {% endif %}
-            </div>
-        </div>
-    </header>
-
     <div class="w3-teal w3-margin-bottom"><br></div>
 
     <!-- First Photo Grid-->
+  
     <div class="w3-row-padding">
         <div class="w3-third w3-container w3-margin-bottom">
             <img src="TODO" alt="TODO" style="width: 100%;" class="w3-hover-opacity" />
             <div class="w3-container w3-white">
-                <p><b>Semester I</b></p>
-                <p>Show the subjects available here. Box is resized dynamically.</p>
+                <p><b>Textbooks</b></p>
+                <p><a href=""></a>
+                </p>
             </div>
         </div>
+    
+    <a href="{% url 'groups:all' %}">
         <div class="w3-third w3-container w3-margin-bottom">
             <img src="TODO" alt="TODO" style="width: 100%;" class="w3-hover-opacity" />
             <div class="w3-container w3-white">
-                <p><b>Semester II</b></p>
-                <p>{python here}</p>
+                <p><b>Notes</b></p>
+                
                 <ul>
-                    <li>Thank</li>
-                    <li>God</li>
-                    <li>Kannada</li>
-                    <li>Mei</li>
-                    <li>Pass</li>
-                    <li>Ho</li>
-                    <li>Gaya</li>
+                   <p>Ah! who has time to write notes?</p> 
+                   <p> Download some nerd-made notes!
+                    And save your time for other 'important' things</p>
                 </ul>
             </div>
+
         </div>
+    </a>
         <div class="w3-third w3-container">
             <img src="TODO" alt="TODO" style="width: 100%;" class="w3-hover-opacity" />
             <div class="w3-container w3-white">
-                <p><b>Semester III</b></p>
+                <p><b> Some Useful links ! </b></p>
                 <p>
-                    Praesent tincidunt sed tellus ut rutrum. Sed vitae justo condimentum, porta lectus vitae, ultricies congue gravida diam non fringilla.
+                    Tech-Blogs,Free online courses and more!
                 </p>
             </div>
         </div>
@@ -98,10 +44,10 @@
         <div class="w3-third w3-container w3-margin-bottom">
             <img src="TODO" alt="TODO" style="width: 100%;" class="w3-hover-opacity" />
             <div class="w3-container w3-white">
-                <p><b>Semester IV</b></p>
+                <p><b>Message Board</b></p>
                 <p>
-                    Praesent tincidunt sed tellus ut rutrum. Sed vitae justo condimentum, porta lectus vitae, ultricies congue gravida diam non fringilla.
-                </p>
+                    Request something,or just say hi....maybe we can be best friends!               
+                 </p>
             </div>
         </div>
         <div class="w3-third w3-container w3-margin-bottom">
@@ -124,37 +70,7 @@
         </div>
     </div>
 
-    <!-- Third Photo Grid-->
-    <div class="w3-row-padding">
-        <div class="w3-third w3-container w3-margin-bottom">
-            <img src="TODO" alt="TODO" style="width: 100%;" class="w3-hover-opacity" />
-            <div class="w3-container w3-white">
-                <p><b>Semester VII</b></p>
-                <p>
-                    Praesent tincidunt sed tellus ut rutrum. Sed vitae justo condimentum, porta lectus vitae, ultricies congue gravida diam non fringilla.
-                </p>
-            </div>
-        </div>
-        <div class="w3-third w3-container w3-margin-bottom">
-            <img src="TODO" alt="TODO" style="width: 100%;" class="w3-hover-opacity" />
-            <div class="w3-container w3-white">
-                <p><b>Semester VIII</b></p>
-                <p>
-                    Praesent tincidunt sed tellus ut rutrum. Sed vitae justo condimentum, porta lectus vitae, ultricies congue gravida diam non fringilla.
-                </p>
-            </div>
-        </div>
-        <div class="w3-third w3-container">
-            <img src="TODO" alt="TODO" style="width: 100%;" class="w3-hover-opacity" />
-            <div class="w3-container w3-white">
-                <p><b>Misc</b></p>
-                <p>
-                    Praesent tincidunt sed tellus ut rutrum. Sed vitae justo condimentum, porta lectus vitae, ultricies congue gravida diam non fringilla.
-                </p>
-            </div>
-        </div>
-    </div>
-
+    
     <br />
 
     <div class="w3-container w3-padding-large" style="margin-bottom: 32px;" id="about">
