--- a/e_lib/templates/index.html
+++ b/e_lib/templates/index.html
@@ -8,6 +8,12 @@
             <img src="TODO" alt="TODO" style="width: 100%;" class="w3-hover-opacity" />
             <div class="w3-container w3-white">
                 <p><b>Textbooks</b></p>
+                <br>
+                <br>
+                <br>
+                <br>
+                <br>
+                <br>
                 <p><a href=""></a>
                 </p>
             </div>
@@ -28,6 +34,7 @@
 
         </div>
     </a>
+    <a href="{% url 'links' %}">
         <div class="w3-third w3-container">
             <img src="TODO" alt="TODO" style="width: 100%;" class="w3-hover-opacity" />
             <div class="w3-container w3-white">
@@ -35,10 +42,12 @@
                 <p>
                     Tech-Blogs,Free online courses and more!
                 </p>
+                <br><br><br><br>
             </div>
+        
         </div>
     </div>
-
+    </a>
     <!-- Second Photo Grid-->
     <div class="w3-row-padding">
         <div class="w3-third w3-container w3-margin-bottom">
@@ -48,26 +57,11 @@
                 <p>
                     Request something,or just say hi....maybe we can be best friends!               
                  </p>
+                 <br><br><br><br>
             </div>
         </div>
-        <div class="w3-third w3-container w3-margin-bottom">
-            <img src="TODO" alt="TODO" style="width: 100%;" class="w3-hover-opacity" />
-            <div class="w3-container w3-white">
-                <p><b>Semester V</b></p>
-                <p>
-                    Praesent tincidunt sed tellus ut rutrum. Sed vitae justo condimentum, porta lectus vitae, ultricies congue gravida diam non fringilla.
-                </p>
-            </div>
-        </div>
-        <div class="w3-third w3-container">
-            <img src="TODO" alt="TODO" style="width: 100%;" class="w3-hover-opacity" />
-            <div class="w3-container w3-white">
-                <p><b>Semester VI</b></p>
-                <p>
-                    Praesent tincidunt sed tellus ut rutrum. Sed vitae justo condimentum, porta lectus vitae, ultricies congue gravida diam non fringilla.
-                </p>
-            </div>
-        </div>
+        
+        
     </div>
 
     
