--- a/e_lib/posts/templates/posts/post_form.html
+++ b/e_lib/posts/templates/posts/post_form.html
@@ -10,4 +10,6 @@
 	{% bootstrap_form form %}
 	<input type="submit" value="Post" class="btn btn-primary btn-large">
 </form>
+<p>Enter a google drive or dropbox url in the notes url field </p>
+<p>Thanks for your contribution ! </p>
 {% endblock %}
