--- a/e_lib/templates/index.html
+++ b/e_lib/templates/index.html
@@ -2,7 +2,7 @@
     
 
     <!-- First Photo Grid-->
-  
+    <a href="{% url 'textbooks' %}">
     <div class="w3-row-padding">
         <div class="w3-third w3-container w3-margin-bottom">
             <img src="TODO" alt="TODO" style="width: 100%;" class="w3-hover-opacity" />
@@ -14,11 +14,11 @@
                 <br>
                 <br>
                 <br>
-                <p><a href=""></a>
+                <p>
                 </p>
             </div>
         </div>
-    
+    </a>
     <a href="{% url 'groups:all' %}">
         <div class="w3-third w3-container w3-margin-bottom">
             <img src="TODO" alt="TODO" style="width: 100%;" class="w3-hover-opacity" />
@@ -49,6 +49,7 @@
     </div>
     </a>
     <!-- Second Photo Grid-->
+    <a href="{% url 'message' %}">
     <div class="w3-row-padding">
         <div class="w3-third w3-container w3-margin-bottom">
             <img src="TODO" alt="TODO" style="width: 100%;" class="w3-hover-opacity" />
@@ -63,7 +64,7 @@
         
         
     </div>
-
+    </a>
     
     <br />
 
