--- a/e_lib/templates/links.html
+++ b/e_lib/templates/links.html
@@ -1,1 +1,4 @@
-{%extends 'base.html'%}
+{% extends 'base.html'%} 
+{% block content %}
+    <h1>UNDERWORK! <P>COME BACK LATER!!</P></h1>
+{% endblock%}   
