--- a/e_lib/templates/index.html
+++ b/e_lib/templates/index.html
@@ -5,7 +5,8 @@
     <a href="{% url 'textbooks' %}">
     <div class="w3-row-padding">
         <div class="w3-third w3-container w3-margin-bottom">
-            <img src="TODO" alt="TODO" style="width: 100%;" class="w3-hover-opacity" />
+            <!-- img src="TODO" alt="TODO" style="width: 100%;" class="w3-hover-opacity" / -->
+            <i class="fa fa-bars"><b> Books </b></i>  
             <div class="w3-container w3-white">
                 <p><b>Textbooks</b></p>
                 <br>
@@ -21,8 +22,10 @@
     </a>
     <a href="{% url 'groups:all' %}">
         <div class="w3-third w3-container w3-margin-bottom">
-            <img src="TODO" alt="TODO" style="width: 100%;" class="w3-hover-opacity" />
+            <!--img src="TODO" alt="TODO" style="width: 100%;" class="w3-hover-opacity" /-->
+            <i class="fa fa-file"><b> Notes</b></i>
             <div class="w3-container w3-white">
+                
                 <p><b>Notes</b></p>
                 
                 <ul>
@@ -36,7 +39,8 @@
     </a>
     <a href="{% url 'links' %}">
         <div class="w3-third w3-container">
-            <img src="TODO" alt="TODO" style="width: 100%;" class="w3-hover-opacity" />
+            <!-- img src="TODO" alt="TODO" style="width: 100%;" class="w3-hover-opacity" / -->
+            <i class="fa fa-plane"> <b>Links</b></i>
             <div class="w3-container w3-white">
                 <p><b> Some Useful links ! </b></p>
                 <p>
@@ -52,7 +56,8 @@
     <a href="{% url 'message' %}">
     <div class="w3-row-padding">
         <div class="w3-third w3-container w3-margin-bottom">
-            <img src="TODO" alt="TODO" style="width: 100%;" class="w3-hover-opacity" />
+            <!--img src="TODO" alt="TODO" style="width: 100%;" class="w3-hover-opacity" /-->
+            <i class="fa fa-bars"><b> Message Board </b> </i>
             <div class="w3-container w3-white">
                 <p><b>Message Board</b></p>
                 <p>
@@ -70,7 +75,9 @@
 
     <div class="w3-container w3-padding-large" style="margin-bottom: 32px;" id="about">
         <h4><b>About Notesify</b></h4>
-        <p>Lorem Ipsum</p>
+        <p>We believe in sharing is caring.Asking friends for notes for each subject is cumbersome
+            and <br> we are too lazy to even complete our senten...
+        </p>
     </div>
     <!-- Contact Section -->
     <div class="w3-container w3-padding-large w3-teal">
