--- a/e_lib/accounts/templates/accounts/login.html
+++ b/e_lib/accounts/templates/accounts/login.html
@@ -13,4 +13,9 @@
             <p><input type="submit" class="btn btn-default" value="Submit">
             </div>
         </form>
+    <p>New here? 
+        <button>
+        <i class="fa fa-user-plus w3-margin-right"></i><a href="{% url 'accounts:signup' %}"
+        style="text-decoration: none;">Sign-up</a>
+        </button></p>
 {% endblock%}
